--- a/Review-analysis.ipynb
+++ b/Review-analysis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "238deaa5",
+   "metadata": {},
+   "source": [
+    "# Hotel Reviews analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "c63f5e6b",
